# FinalProject

./: .gitignore  .readthedocs.yaml  Bibliografía.xlsx  Instructions.md  LICENSE  README.md  checking_last_patient.ipynb  dataset.py  dataset_class.ipynb  dbp_model.py  dbp_model_2.py  deepfbp_model.py  environment.yml  extract_sinograms.py  extract_sinograms_gt.py  extract_sinograms_low_dose.py  file.py  job.slurm  pyproject.toml  report_results.py  report_results.sh  requirements.txt  trial.ipynb  ~$Bibliografía.xlsx
ct_reconstruction/: version.py
ct_reconstruction/callbacks/: early_stopping.py
ct_reconstruction/datasets/: dataset.py
ct_reconstruction/models/: deep_back_projection.py  deep_filtered_back_projection.py  deep_fusion_back_projection.py  fusion_filtered_back_projection.py  model.py  modelo2.py
ct_reconstruction/utils/: loggers.py  metrics.py  open_files.py  plotting.py
docs/: conf.py  index.rst
docs/material/: callbacks.rst  datasets.rst  derivates_comparison.rst  models.rst  utils.rst
functions/: dataset.py  deep_back_projection.py  early_stopping.py  metrics.py  model.py
jobs_files/: dbp_model.py  dbp_model_complete.py  dbp_model_copy.py  dbp_model_results.py  deepfbp_model.py  deepfbp_model_filterII.py  deepfbp_model_filterII_phase3.py  deepfbp_model_phase3.py  extract_sinograms_gt.py  extract_sinograms_low_dose.py  image_distribution.py  report_plots.py  report_results.py  sinogram_simulation.py  sparse_view_test.py
jobs_files/DBP/: dbp_model.py
jobs_files/DeepFBP/: deepfbp_model.py  (+4 more)
notebooks/: dataset_class.ipynb
(+35 files in other folders)
