[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ct_reconstruction"
version = "0.1.0"
description = "A Python package for low-dose CT reconstruction using deep learning models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
    { name = "Andrea", email = "as3628@cam.ac.uk" }
]

keywords = ["CT", "reconstruction", "deep learning", "medical imaging", "tomography"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "h5py",
    "scikit-image",
    "gcsfs",
    "tqdm",
    "accelerate",
    "tomosipo",
    "torchsummary", 
    "pytorch_msssim"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"ct_reconstruction" = ["*.json", "*.pt", "models/*.pth", "configs/*.yaml"]

[tool.setuptools_scm]
write_to = "ct_reconstruction/version.py"  # Where to write the dynamic version